bcm up to Usecfg4

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -1,127 +1,19 @@
-cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name cfg4)
-project(${name})
+project(${name} VERSION 0.1.0)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-                      "$ENV{ENV_HOME}/cmake/Modules"
-          ) 
-
-set(BUILD_SHARED_LIBS ON)
-
-#message("${name}.CMAKE_CXX_FLAGS (init) : ${CMAKE_CXX_FLAGS} ")
 include(EnvBuildOptions)
-#message("${name}.CMAKE_CXX_FLAGS (ebo)  : ${CMAKE_CXX_FLAGS} ")
 include(EnvCompilationFlags)
-#message("${name}.CMAKE_CXX_FLAGS (ecf)  : ${CMAKE_CXX_FLAGS} ")
 
+include(GNUInstallDirs)
+set(CMAKE_INSTALL_INCLUDEDIR "include/${name}")
 
-find_package(PLog REQUIRED)
-find_package(OpticksBoost REQUIRED)
+find_package(BCM)
+include(BCMDeploy)
 
-find_package(SysRap REQUIRED)
-find_package(BoostRap REQUIRED)
-find_package(GLM REQUIRED)
-find_package(NPY REQUIRED)
-find_package(GGeo REQUIRED)
-find_package(OpticksCore REQUIRED)
-find_package(OpticksGeometry REQUIRED)
-
-find_package(Geant4 REQUIRED) ## invoke cmake with -DGeant4_DIR=$(g4-cmake-dir) 
-
-
-
-# Parsing G4Version.hh header makes the CFG4_G4VERSION_NUMBER
-# available at configure time, the value is written to inc/OpticksCMakeConfig.hh 
-# by top level CMakeLists.txt
-
-set(CFG4_G4VERSION_NUMBER 0 PARENT_SCOPE)
-if(Geant4_FOUND)
-   set(_dirs ${Geant4_INCLUDE_DIRS}) 
-   list(GET _dirs 0 _firstdir)
-   #message(STATUS "${name}.Geant4_INCLUDE_DIRS    : ${Geant4_INCLUDE_DIRS} ")
-   #message(STATUS "${name}._firstdir              : ${_firstdir} ")
-   file(READ "${_firstdir}/G4Version.hh" _contents)
-   #message(STATUS "${name}.contents : ${_contents} ")
-   string(REGEX REPLACE "\n" ";" _contents "${_contents}")
-   foreach(_line ${_contents})
-        if (_line MATCHES "#define G4VERSION_NUMBER[ ]+([0-9]+)$")
-            set(CFG4_G4VERSION_NUMBER ${CMAKE_MATCH_1} PARENT_SCOPE)
-            message(STATUS "${name}._line ${_line} ===> ${CMAKE_MATCH_1} ") 
-        endif()
-   endforeach()
-else(Geant4_FOUND)
-   message(STATUS "${name}.Geant4 NOT-FOUND ")
-endif(Geant4_FOUND)
-
-
-
-
-
-
-
-
-#message("${name}.CMAKE_CXX_FLAGS (fg4)  : ${CMAKE_CXX_FLAGS} ")
-
-
-find_package(EnvXercesC  REQUIRED)  
-
-message("${name}.XERCESC_INCLUDE_DIR  : ${XERCESC_INCLUDE_DIR} ")
-message("${name}.XERCESC_LIBRARIES    : ${XERCESC_LIBRARIES} ")
-
-
-
-#find_package(G4DAE  REQUIRED)  
-
-set(INCLUDE_DIRS  
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${PLog_INCLUDE_DIRS}
-   ${OpticksBoost_INCLUDE_DIRS}
-   ${SysRap_INCLUDE_DIRS} 
-   ${BoostRap_INCLUDE_DIRS} 
-   ${GLM_INCLUDE_DIRS} 
-   ${NPY_INCLUDE_DIRS}
-   ${GGeo_INCLUDE_DIRS}
-   ${OpticksCore_INCLUDE_DIRS}
-   ${OpticksGeometry_INCLUDE_DIRS}
-   ${Geant4_INCLUDE_DIRS}
-   ${XERCESC_INCLUDE_DIR}
- #  ${G4DAE_INCLUDE_DIRS}
-)
-
-set(LIBRARIES
-   ${PLog_LIBRARIES}
-   ${OpticksBoost_LIBRARIES}
-   ${SysRap_LIBRARIES}
-   ${BoostRap_LIBRARIES}
-   ${NPY_LIBRARIES}
-   ${GGeo_LIBRARIES}
-   ${OpticksCore_LIBRARIES}
-   ${OpticksGeometry_LIBRARIES}
-   ${Geant4_LIBRARIES}
-   ${XERCESC_LIBRARIES}
-  # ${G4DAE_LIBRARIES}
-)
-
-set(DEFINITIONS
-   ${PLog_DEFINITIONS} 
-   ${OpticksBoost_DEFINITIONS} 
-   ${SysRap_DEFINITIONS} 
-   ${BoostRap_DEFINITIONS} 
-   ${NPY_DEFINITIONS} 
-   ${GGeo_DEFINITIONS} 
-   ${OpticksCore_DEFINITIONS}
-   ${OpticksGeometry_DEFINITIONS}
-   ${Geant4_DEFINITIONS}
-   ${XERCESC_DEFINITIONS}
-  #${G4DAE_DEFINITIONS}
-)
-
-#message(STATUS "XERCESC_INCLUDE_DIR  : ${XERCESC_INCLUDE_DIR}")
-#message(STATUS "XERCESC_LIBRARIES    : ${XERCESC_LIBRARIES}")
-#message(STATUS "XERCESC_DEFINITIONS  : ${XERCESC_DEFINITIONS}")
-
-include_directories(${INCLUDE_DIRS})   
-add_definitions(${DEFINITIONS})
+find_package(G4              REQUIRED MODULE)
+find_package(OpticksXercesC  REQUIRED MODULE)
+find_package(OpticksGeometry REQUIRED CONFIG)
 
 
 set(SOURCES
@@ -204,6 +96,7 @@ set(SOURCES
     CBoundaryProcess.cc
     CTrackingAction.cc
     CStage.cc
+    CProcessSwitches.cc
     CG4Ctx.cc
     CG4.cc
     CRayTracer.cc
@@ -224,6 +117,7 @@ set(HEADERS
     CFG4_LOG.hh
     CFG4_API_EXPORT.hh
     CFG4_HEAD.hh
+    CFG4_BODY.hh
     CFG4_TAIL.hh
     CFG4_PUSH.hh
     CFG4_POP.hh
@@ -234,6 +128,7 @@ set(HEADERS
     DsG4Scintillation.h
     DsG4OpRayleigh.h
     DsG4OpBoundaryProcess.h
+    DsG4OpBoundaryProcessStatus.h
     DsG4Cerenkov.h
     DsPhotonTrackInfo.h
     DsG4CompositeTrackInfo.h
@@ -295,19 +190,26 @@ set(HEADERS
     CSteppingAction.hh
     CTrackingAction.hh
     CStage.hh
+    CProcessSwitches.hh
+    CG4Ctx.hh
     CG4.hh
     CCollector.hh
     CRunAction.hh
     CEventAction.hh
-
-    
 )
 
-add_library(${name} SHARED ${SOURCES})
-target_link_libraries(${name} ${LIBRARIES})
-install(TARGETS ${name} DESTINATION lib)
-install(FILES ${HEADERS} DESTINATION include/${name})
+add_library(${name} SHARED  ${SOURCES})
+
+target_link_libraries( ${name} PUBLIC 
+   Opticks::G4
+   Opticks::OpticksXercesC
+   Opticks::OpticksGeometry
+)
+
+target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
+
+install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
 
 add_subdirectory(tests)
-
 
