--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -1,7 +1,6 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name cfg4Test)
-project(${name})
-
+project(${name} VERSION 0.1.0)
 
 set(_TEST_SOURCES
 
@@ -37,11 +36,11 @@ foreach(SRC ${TEST_SOURCES})
 
     get_filename_component(TGT ${SRC} NAME_WE)
     add_executable(${TGT} ${SRC})
-    target_link_libraries(${TGT} ${LIBRARIES} cfg4)
+    target_link_libraries(${TGT} cfg4)
     install(TARGETS ${TGT} DESTINATION lib)
 
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
+    #add_dependencies(check ${TGT})
 
 endforeach()
 
