bcm transition almost done for the sub-projs, top level umbrella needed too though

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name cfg4Test)
+set(name CFG4Test)
 project(${name} VERSION 0.1.0)
 
 set(_TEST_SOURCES
@@ -36,7 +36,7 @@ foreach(SRC ${TEST_SOURCES})
 
     get_filename_component(TGT ${SRC} NAME_WE)
     add_executable(${TGT} ${SRC})
-    target_link_libraries(${TGT} cfg4)
+    target_link_libraries(${TGT} CFG4)
     install(TARGETS ${TGT} DESTINATION lib)
 
     add_test(${name}.${TGT} ${TGT})
