--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name cfg4)
+set(name CFG4)
 project(${name} VERSION 0.1.0)
 
 include(EnvBuildOptions)
