toplevel CMakeLists.txt that just add_subdirectory for the 18 subdirs manages to build, investigating test skips and fails especially from thrap- where all tests fail with integrated build approach but they all succeed with proj-by-proj : perhaps some flag diddling difference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+   message(STATUS " CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR} ")
+   message(STATUS " CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR} ")
    message(FATAL_ERROR "in-source build detected : DONT DO THAT")
 endif()
 
@@ -9,6 +11,7 @@ project(${name} VERSION 0.1.0)
 
 include(CTest)
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
+
 
 set(SUBDIRS
   okconf
@@ -30,14 +33,33 @@ set(SUBDIRS
   cfg4
 )
 
-## opticks convention : lowercased project names match directory names
+#[=[
+Opticks CMake Naming Conventions 
+==================================
+
+1. project names are the same as the library targets they generate 
+2. project names are CamelCased, project directory names are all lowercase
+3. lowercased project names match the names of their directories
+
+#]=]
+
 macro(find_package)    
-   string(TOLOWER ${ARGV0} lpkg) 
+   set(pkg ${ARGV0}) 
+   set(_arglist "${ARGV}")
+
+   string(TOLOWER ${pkg} lpkg) 
    if(NOT "${lpkg}" IN_LIST SUBDIRS)
-       message(STATUS "find_package ( ${ARGV} )  proceed as ${lpkg} is not in subdirs list ")
+       message(STATUS "find_package ( ${ARGV} ) START ")
        _find_package(${ARGV})   
+       set(_pkg_found ${${pkg}_FOUND})
+
+       message(STATUS "find_package ( ${ARGV} ) --> ${_pkg_found} ")
+       
+       if(NOT "QUIET" IN_LIST _arglist AND NOT ${_pkg_found})
+           message(FATAL_ERROR "ABORT : failed to find non-QUIET pkg ${pkg} ")
+       endif()
    else()
-       message(STATUS "find_package ( ${ARGV} )  SKIPPING as ${lpkg} is in subdirs list ")
+       message(STATUS "find_package ( ${ARGV} ) SKIP integrated pkg ")
    endif()
 endmacro()
 
