--- a/assimprap/tests/CMakeLists.txt
+++ b/assimprap/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name AssimpRapTest)
-project(${name})
+project(${name} VERSION 0.1.0)
 
 #file(GLOB TEST_SOURCES "*Test.cc")
 
@@ -23,7 +23,7 @@ foreach(SRC ${TEST_SOURCES})
     add_executable(${TGT} ${SRC})
 
     add_test(${name}.${TGT} ${TGT})
-    add_dependencies(check ${TGT})
+    #add_dependencies(check ${TGT})
 
     target_link_libraries(${TGT} ${LIBRARIES} AssimpRap)
     install(TARGETS ${TGT} DESTINATION lib)
