--- a/openmeshrap/CMakeLists.txt
+++ b/openmeshrap/CMakeLists.txt
@@ -42,6 +42,5 @@ target_link_libraries( ${name} PUBLIC  Opticks::OpticksCore Opticks::GGeo )
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-#add_subdirectory(tests EXCLUDE_FROM_ALL)
-#add_subdirectory(tests)
+add_subdirectory(tests)
 
