--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -86,10 +86,9 @@ target_include_directories( ${name} PUBLIC
 )
 
 
-bcm_deploy(TARGETS ${name} INCLUDE include NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-#add_subdirectory(tests EXCLUDE_FROM_ALL)
 add_subdirectory(tests)
 
 
